--- a/index-3.html
+++ b/index-3.html
@@ -2,22 +2,23 @@
 <html lang="zh-hans">
 <head>
 <meta charset="utf-8">
-<title>useEffect 依赖 []</title>
+<title>自定义 hook, useEffect 依赖所有外部作用域中会发生变化且在 effect 中使用的变量</title>
 </head>
 <body>
-<h1>useEffect 依赖 []</h1>
+<h1>自定义 hook, useEffect 依赖所有外部作用域中会发生变化且在 effect 中使用的变量</h1>
 <div id="root">loading...</div>
 <hr />
+
 <code>
 <pre>
 'use strict'
 
 const {createElement: e, useState, useEffect} = React
 
-function App() {
-  console.log(`App start`)
+function useP() {
+  console.log('useP start')
   const [s, setS] = useState(function() {
-    console.log('App lazy initiate state')
+    console.log('useP lazy initiate state')
     return 's'
   })
   useEffect(function() {
@@ -34,14 +35,16 @@ function App() {
     return function() {
       console.log('effect cleaned')
     } 
-  }, [])
+  }/* 依赖所有外部作用域中会发生变化且在 effect 中使用的变量 */)
+  console.log('useP return s -', s)
+  return s
+}
+
+function App() {
+  console.log(`App start`)
+  const s = useP()
   console.log(`App return renderer s - ${s}`)
-  return e('div', {onClick() {
-    setS(function(prev) {
-      console.log('click prev - ', prev)
-      return prev + '!!!'
-    })
-  }}, `my react app s - ${s}`)
+  return e('div', {}, `my react app s - ${s}`)
 }
 
 ReactDOM.render(
@@ -50,7 +53,6 @@ ReactDOM.render(
 )
 </pre>
 </code>
-
 <script src="react.development.js"></script>
 <script src="react-dom.development.js"></script>
 <script>
@@ -59,10 +61,10 @@ ReactDOM.render(
 
 const {createElement: e, useState, useEffect} = React
 
-function App() {
-  console.log(`App start`)
+function useP() {
+  console.log('useP start')
   const [s, setS] = useState(function() {
-    console.log('App lazy initiate state')
+    console.log('useP lazy initiate state')
     return 's'
   })
   useEffect(function() {
@@ -79,14 +81,16 @@ function App() {
     return function() {
       console.log('effect cleaned')
     } 
-  }, [])
+  }/* 依赖所有外部作用域中会发生变化且在 effect 中使用的变量 */)
+  console.log('useP return s -', s)
+  return s
+}
+
+function App() {
+  console.log(`App start`)
+  const s = useP()
   console.log(`App return renderer s - ${s}`)
-  return e('div', {onClick() {
-    setS(function(prev) {
-      console.log('click prev s - ', prev)
-      return prev + '!!!'
-    })
-  }}, `my react app s - ${s}`)
+  return e('div', {}, `my react app s - ${s}`)
 }
 
 ReactDOM.render(
@@ -96,22 +100,29 @@ ReactDOM.render(
 
 /*
 App start
-App lazy initiate state
+useP start
+useP lazy initiate state
+useP return s - s
 App return renderer s - s
   effect start
   effect return cleaner
   effect setS start
   effect setS prev s - s
-  App start
-  App return renderer s - sos
-  effect setS end
-
-- - - clicked - - -
-
-click prev s - sos
-App start
-App return renderer s - sos!!!
-
+    App start
+    useP start
+    useP return s - sos
+    App return renderer s - sos
+    effect setS end
+      effect cleaned
+      effect start
+      effect return cleaner
+      effect setS start
+        App start
+        useP start
+        effect setS prev s - sos
+        useP return s - sos
+        App return renderer s - sos
+        effect setS end
 */
 
 </script>
