--- a/index-2.html
+++ b/index-2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-hans">
+<html lang="en-us">
 <head>
 <meta charset="utf-8">
 <title>useEffect 依赖所有外部作用域中会发生变化且在 effect 中使用的变量</title>
@@ -11,44 +11,46 @@
 
 <code>
 <pre>
-'use strict'
-
-const {createElement: e, useState, useEffect} = React
-
-function App() {
-  console.log(`App start`)
-  const [s, setS] = useState(function() {
-    console.log('App lazy initiate state')
-    return 's'
-  })
-  useEffect(function() {
-    console.log(`effect start`)
-    Promise.resolve().then(function() {
-      console.log('effect setS start')
-      setS(function(prev) {
-        console.log('effect setS prev s -', prev)
-        return 'sos'
-      })
-      console.log('effect setS end')
-    })
-    console.log('effect return cleaner')
-    return function() {
-      console.log('effect cleaned')
-    } 
-  }/* 依赖所有外部作用域中会发生变化且在 effect 中使用的变量 */)
-  console.log(`App return renderer s - ${s}`)
-  return e('div', {onClick() {
-    setS(function(prev) {
-      console.log('click prev - ', prev)
-      return prev + '!!!'
-    })
-  }}, `my react app s - ${s}`)
-}
-
-ReactDOM.render(
-  e(App),
-  document.getElementById('root')
-)
+┌──┬─────────────────────────────────────────────────────┐
+│1 │'use strict'                                         │
+│2 │                                                     │
+│3 │const {createElement: e, useState, useEffect} = React│
+│4 │                                                     │
+│5 │function App() {                                     │
+│6 │  console.log(`App start`)                           │
+│7 │  const [s, setS] = useState(function() {            │
+│8 │    console.log('App lazy initiate state')           │
+│9 │    return 's'                                       │
+│10│  })                                                 │
+│11│  useEffect(function() {                             │
+│12│    console.log(`effect start`)                      │
+│13│    Promise.resolve().then(function() {              │
+│14│      console.log('effect setS start')               │
+│15│      setS(function(prev) {                          │
+│16│        console.log('effect setS prev s -', prev)    │
+│17│        return 'sos'                                 │
+│18│      })                                             │
+│19│      console.log('effect setS end')                 │
+│20│    })                                               │
+│21│    console.log('effect return cleaner')             │
+│22│    return function() {                              │
+│23│      console.log('effect cleaned')                  │
+│24│    }                                                │
+│25│  })                                                 │
+│26│  console.log(`App return renderer s - ${s}`)        │
+│27│  return e('div', {onClick() {                       │
+│28│    setS(function(prev) {                            │
+│29│      console.log('click prev - ', prev)             │
+│30│      return prev + '!!!'                            │
+│31│    })                                               │
+│32│  }}, `my react app s - ${s}`)                       │
+│33│}                                                    │
+│34│                                                     │
+│35│ReactDOM.render(                                     │
+│36│  e(App),                                            │
+│37│  document.getElementById('root')                    │
+│38│)                                                    │
+└──┴─────────────────────────────────────────────────────┘
 </pre>
 </code>
 <script src="react.development.js"></script>
